test/Fail/Issue5823.err
Issue5823.agda:26.1-27.91: error: [TerminationIssue]
Termination checking failed for the following function:
  isPropAcc
Problematic call:
  isPropAcc (x n p) (y n p)
    (at Issue5823.agda:27.65-74)
